# ideation-agent-researcher

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: run.yml
src/ideation_agent_researcher/: __init__.py  agent.py  main.py  memory.py
src/ideation_agent_researcher/prompts/: system.md
tests/: test_agent.py
